--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -83,6 +83,28 @@
 
       }
     }
+
+    const $form = $('form')
+
+    $form.on('submit', submitHandler)
+
+    function submitHandler(e) {
+
+      $.ajax({
+        url: '/sendMailForm',
+        type: 'POST',
+        data: $form.serialize().replace('&message=', '&message=' +
+          $("iframe").contents().find("body").find("p")[0].outerHTML)
+      }).done(response => {
+        if (response.split('Email has been sent').length > 1) {
+          document.body.innerHTML = response;
+        } else {
+          console.log(response)
+        }
+      })
+      e.preventDefault()
+
+    }
   </script>
 </body>
 
