--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -86,7 +86,7 @@
 
     const $form = $('form')
 
-    $form.on('submit', submitHandler)
+   // $form.on('submit', submitHandler)
 
     function submitHandler(e) {
 
