--- a/views/sent.handlebars
+++ b/views/sent.handlebars
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tchitos Mail</title>
+  <link rel="icon" href="public/favicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="public/css/style.css">
 </head>
 
 <body>
   <div class="container">
-    <h1 class="brand"><span>Tchitos</span> Web Design</h1>
+    <h1 class="brand"><span>Tchitos</span> Web Design
+    <img src="public/logo.png" alt="">
+    </h1>
     <p>{{msg}}</p>
     <a href="/">Go Home page</a>
   </div>
