--- a/views/sent.handlebars
+++ b/views/sent.handlebars
@@ -6,14 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tchitos Mail</title>
-  <link rel="icon" href="public/favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="public/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="public/css/style.css">
 </head>
 
 <body>
+  <div id="bg"></div>
   <div class="container">
-    <h1 class="brand"><span>Tchitos</span> Web Design
-    <img src="public/logo.png" alt="">
+    <div class="head">
+      <h1 class="brand"><span>Tchitos</span> Web Design </h1>
+      <img src="public/logo.png" alt="">
+    </div>
     </h1>
     <p>{{msg}}</p>
     <a href="/">Go Home page</a>
