--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,7 +150,7 @@ button {
 }
 #ipFrame {
   text-align: center;
-  height: 75px;
+  min-height: 75px;
 }
 #ipFrame em {
   text-decoration: underline;
@@ -171,4 +171,8 @@ button {
 }
 a {
   color: var(--main-text-color);
+}
+iframe{
+  height: 300px;
+  width: 100%
 }
