--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,7 +85,7 @@ button,
 input,
 textarea {
   width: 100%;
-  padding: 1em;
+  padding: 6px 10px;
   border: 1px solid var(--main-border-color);
 }
 ::placeholder {
@@ -104,7 +104,7 @@ textarea {
 }
 @media (min-width: 700px) {
   #ipFrame {
-    min-height: 121px;
+    min-height: 91px;
   }
   .wrapper {
     display: grid;
@@ -156,7 +156,7 @@ button {
 }
 #ipFrame {
   text-align: center;
-  padding: 1em 0;
+  padding-top: 1em ;
 }
 #ipFrame em {
   text-decoration: underline;
