--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -70,7 +70,7 @@
             <label>Message</label>
             <textarea name="body"></textarea>
             <script>
-              CKEDITOR.replace('message', {
+              CKEDITOR.replace('body', {
                 height: 150
               });
 
