body parser fix

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -61,7 +61,7 @@
         </ul>
       </div>
       <div class="contact">
-        <form method="POST" action="sendMailForm">
+        <form method="POST" action="sendMail">
           <p>
             <label>Feel free to test</label>
             <input id="mail" type="email" name="email" placeholder="Your email here">
